--- a/scaffolds/simple/public/index.html
+++ b/scaffolds/simple/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
     <title>icejs simple app</title>
+    <link rel="manifest" href="./manifest.json" />
   </head>
 
   <body>
